some align fixed

--- a/src/modules/cart/components/CartItem/CartItem.module.css
+++ b/src/modules/cart/components/CartItem/CartItem.module.css
@@ -54,5 +54,6 @@
  .close_icon {
    position: absolute;
    right: -5px;
+  top:-3px;
    transform: scale(0.7);
  }
